fixed BottomNav layout issue on mobile

--- a/src/presentation/App.module.scss
+++ b/src/presentation/App.module.scss
@@ -14,10 +14,16 @@
     box-sizing: border-box;
     flex: 1 1 100%;
     overflow: overlay;
+
+    @media (max-width: 600px) {
+      padding-bottom: 49px;
+    }
   }
 
   .bottomNav {
-    position: sticky;
+    position: fixed;
+    left: 0;
+    right: 0;
     bottom: 0;
     z-index: 1000;
   }
